WEB-466 The tooltip is moving all over the screen on mobile in Landscape bug fixed

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1099,3 +1099,7 @@ select {
   width: 0px;
   height: 0px;
 }
+
+.tooltip {
+  z-index: 1 !important;
+}
